# chse

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
chse/: __init__.py
chse/benchmark/: __init__.py  flip_threshold.py  oscillation.py  two_player.py
chse/core/: __init__.py  anticipation.py  kernel.py  mechanisms.py  network.py  primitives.py  simulation.py
chse/empirical/: __init__.py  fdi.py
chse/equilibrium/: __init__.py  hoe.py  lyapunov.py  markov.py
chse/phase/: __init__.py  cascade.py  jacobian.py  phase_diagram.py
chse/welfare/: __init__.py  distortions.py  paradox.py
docs/: api.md  design.md  guides.md  index.md  parameters.md  quickstart.md  theory.md
notebooks/: 01_two_player.ipynb  02_phase_diagram.ipynb  03_hoe_welfare_empirical.ipynb
tests/: test_benchmark.py  test_phase3.py
